# home_system

./: .gitignore  CMakeLists.txt  README.md  client.html  client_test.js  package-lock.json  package.json  setup.sh
lib/: CMakeLists.txt
lib/dwarfs/: CMakeLists.txt  alg.h  alias.h  events.cpp  events.h  fs.h  logger.cpp  logger.h
lib/gui/: CMakeLists.txt
lib/gui/imgui/: gui.h
lib/gui/widgets/: image.h  log.h
lib/uSockets/: .directory  CMakeLists.txt  Makefile  libusockets.h
lib/uSockets/crypto/: openssl.c
lib/uWebSockets/: .directory  CMakeLists.txt
lib/uWebSockets/include/: Loop.h  PerMessageDeflate.h
src/: main.cpp
